# Synora

./: README.md  pyproject.toml
datasets/: support_replay_cases.json
synora/: __init__.py
synora/cli/: benchmark.py  dashboard.py  demo.py
synora/engine/: feedback.py  llama_cpp_adapter.py  memory.py  runner.py
synora/learning/: __init__.py  clustering.py  evaluator.py  patcher.py  promoter.py  replay.py  similarity.py
synora/policy/: __init__.py  examples.py  prompt_rules.py  routing.py
synora/storage/: __init__.py  db.py  schema.sql
tests/: test_synora.py
